Remove include and move the files to src

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,11 +1,14 @@
 BUILD=../build
-INC=../include
 ANTLR=../lib/antlr-4.5-complete.jar
 ST=../lib/ST-4.0.8.jar
 
-.PHONY: compiler
+.PHONY: compiler define
 
 .DEFAULT: compiler
 
 compiler:
-	@javac -cp $(ANTLR):$(ST):$(INC):$(BUILD) -d $(BUILD) Adele*.java
+	@javac -cp $(ANTLR):$(ST):$(BUILD) -d $(BUILD) Adele*.java
+
+define:
+	@javac -d $(BUILD) AdeleTypeDes.java
+	@javac -cp $(ANTLR):$(BUILD) -d $(BUILD) adeleListenerImpl.java
