--- a/src/grammar/Makefile
+++ b/src/grammar/Makefile
@@ -4,5 +4,5 @@ ANTLR=../../lib/antlr-4.5-complete.jar
 
 .DEFAULT: grammar
 
-grammar: $(wildcard ./*)
+grammar:
 	@java -cp $(ANTLR) org.antlr.v4.Tool -o ../../build adele.g4
