Clean up my AST test code, modified Makefiles. The java files under src/ are basically copied from chapter 8.4 in "The Definitive Antlr4 Reference". Differences with Jiegang's version 01c1b40: 1) Grammar file is src/grammar/Adl.g4 2) The main function is in TestAdl.java 3) the sample is samples/sample.adele

--- a/src/Makefile
+++ b/src/Makefile
@@ -7,8 +7,8 @@ ST=../lib/ST-4.0.8.jar
 .DEFAULT: compiler
 
 compiler:
-	@javac -cp $(ANTLR):$(ST):$(BUILD) -d $(BUILD) Adele*.java
+	@javac -cp $(ANTLR):$(ST):$(BUILD) -d $(BUILD) TestAdl.java *Phase.java *Scope.java *Symbol.java
 
 define:
-	@javac -d $(BUILD) AdeleTypeDes.java
-	@javac -cp $(ANTLR):$(BUILD) -d $(BUILD) adeleListenerImpl.java
+	#@javac -d $(BUILD) AdeleTypeDes.java
+	#@javac -cp $(ANTLR):$(BUILD) -d $(BUILD) adeleListenerImpl.java
