--- a/src/grammar/Makefile
+++ b/src/grammar/Makefile
@@ -1,8 +1,5 @@
 ANTLR=../../lib/antlr-4.5-complete.jar
-
 .PHONY: grammar
-
 .DEFAULT: grammar
-
 grammar:
-	@java -cp $(ANTLR) org.antlr.v4.Tool -o ../../build Adl.g4
+	@java -cp $(ANTLR) org.antlr.v4.Tool -o ../../build ./adele.g4
